Trying to fix responsive issue on mobile

--- a/src/components/pages/games/_games.scss
+++ b/src/components/pages/games/_games.scss
@@ -63,8 +63,9 @@
 
     & img {
       max-width: 280px;
-      height: 100%;
-      object-fit: cover;
+      @media (min-width: 800px) {
+        height: 100%;
+      }
     }
 
     &-content {
